[package]
name = "timer"
version = "0.2.0"
authors = ["David Teller <yoric@rajtel.name>"]
description = "A simple timer. Use it to schedule execution of closures after a delay or at a given timestamp."
documentation = "http://yoric.github.io/timer.rs/doc/timer/"
repository = "https://github.com/Yoric/timer.rs"
readme = "README.md"
keywords = ["timer", "alarm", "schedule", "chrono", "chronometer"]
license = "MPL-2.0"


[dependencies]
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = [
    "net",
    "thread",
] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "./teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "./teaclave-sgx-sdk/sgx_tstd" }
